--- a/src/containers/Home.css
+++ b/src/containers/Home.css
@@ -28,3 +28,9 @@
 .Home .lander div a:first-child {
   margin-right: 20px;
 }
+
+.Home .card-group .card {
+  display: inline-block;
+  width: 31.3%;
+  margin: 1%;
+}
