--- a/src/containers/Home.css
+++ b/src/containers/Home.css
@@ -34,3 +34,14 @@
   width: 31.3%;
   margin: 1%;
 }
+
+figure.figure {
+  height: 200px;
+  overflow: hidden;
+  width: 100%;
+  text-align: center;
+}
+figure.figure img{
+  max-width: 100%;
+  max-height: 100%;
+}
