--- a/src/containers/Home.css
+++ b/src/containers/Home.css
@@ -11,6 +11,7 @@
 .Home .lander p {
   color: #999;
 }
+
 .Home .notes h4 {
   font-family: 'Open Sans', sans-serif;
   font-weight: 600;
@@ -19,12 +20,15 @@
   white-space: nowrap;
   text-overflow: ellipsis;
 }
+
 .Home .notes p {
   color: #666;
 }
+
 .Home .lander div {
   padding-top: 20px;
 }
+
 .Home .lander div a:first-child {
   margin-right: 20px;
 }
@@ -41,7 +45,29 @@ figure.figure {
   width: 100%;
   text-align: center;
 }
-figure.figure img{
+
+figure.figure img {
   max-width: 100%;
   max-height: 100%;
+}
+
+.bd-example {
+  position: relative;
+  margin: 1rem -15px 0;
+  border: solid #f8f9fa;
+  padding: 1.5rem;
+  margin-right: 0;
+  margin-left: 0;
+  border-width: .2rem;
+}
+
+.rule-header {
+  position: sticky;
+  top: 0;
+  z-index: 1;
+  background: white;
+}
+.close-btn {
+  top:0;
+  right:6px;
 }
