--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,24 @@ input.form-control {
 input[type=file] {
   width: 100%;
 }
+
+.bd-example {
+  position: relative;
+  margin: 1rem -15px 0;
+  border: solid #f8f9fa;
+  padding: 1.5rem;
+  margin-right: 0;
+  margin-left: 0;
+  border-width: .2rem;
+}
+
+.rule-header {
+  position: sticky;
+  top: 0;
+  z-index: 1;
+  background: white;
+}
+.close-btn {
+  top:0;
+  right:6px;
+}
